syntax = "proto3";

package order;

option go_package = "proto/order";

import "google/protobuf/timestamp.proto";

// Value object for money in minor units
message Money {
  int64 amount = 1;    // minor units
  string currency = 2; // ISO 4217
}

// Order Service
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

// Domain Models
message Order {
  string id = 1;
  string user_id = 2;
  OrderStatus status = 3;
  repeated OrderItem items = 4;
  Money total_amount = 5;
  string shipping_address = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message OrderItem {
  string id = 1;
  string product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  Money price = 5;     
  Money total = 6;    
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  PROCESSING = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

// Request/Response Messages
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItemRequest items = 2;
  string shipping_address = 3;
}

message OrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  Order order = 1;
  string message = 2;
}

message GetOrderRequest {
  string id = 1;
  string user_id = 2;
}

message GetOrderResponse {
  Order order = 1;
}

message GetUserOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetUserOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message UpdateOrderStatusRequest {
  string id = 1;
  OrderStatus status = 2;
}

message UpdateOrderStatusResponse {
  Order order = 1;
  string message = 2;
}

message CancelOrderRequest {
  string id = 1;
  string user_id = 2;
}

message CancelOrderResponse {
  Order order = 1;
  string message = 2;
}


